--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-Flask
-torch
-diffusers
-transformers
-accelerate
-Pillow
+Flask==2.3.2
+torch==2.0.1
+diffusers==0.20.0
+transformers==4.31.0
+accelerate==0.22.0
+Pillow==10.0.0
